hphp/hack/test/typecheck/void_usage_placeholder_param.php.exp
File "void_usage_placeholder_param.php", line 10, characters 16-17:
You are using the return value of a void function (Typing[4119])
File "void_usage_placeholder_param.php", line 10, characters 16-17:
A void function doesn't return a value ($_ is a placeholder variable not meant to be used)
